--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   path: ^1.9.1
+  provider: ^6.1.5+1
+  sqflite_common_ffi: ^2.3.6
+  sqflite_common_ffi_web: ^1.0.1+2
 
 dev_dependencies:
   flutter_test:
